@@ -1,1 +1,1 @@
-#define luatex_svn_revision 4914
+#define luatex_svn_revision 4971
