@@ -1,3 +1,11 @@
+2014-03-29  Taco Hoekwater  <taco@luatex.org>
+
+	Import LuaTeX 0.79.1 from LuaTeX repository (released)
+
+2014-03-28  Taco Hoekwater  <taco@luatex.org>
+
+	Import LuaTeX 0.79.0 from LuaTeX repository (released)
+
 2014-03-15  Taco Hoekwater  <taco@luatex.org>
 
 	Import LuaTeX snapshot 0.79.0 from LuaTeX repository (r4903).
